# advent-of-code-2022

./: Cargo.toml  README.md  Renifery Świętego Mikołaja ｜ Piosenki i Rymowanki Dla Dzieci! ｜ Lellobee po polsku [w2A4qG3B-Rc].opus  new_day.sh  run.sh
benches/: all_days.rs
day10a/: Cargo.toml
day10a/src/: main.rs
day10b/: Cargo.toml
day10b/src/: main.rs
day11a/: Cargo.toml
day11a/src/: main.rs
day11b/: Cargo.toml
day11b/src/: main.rs
day12a/: Cargo.toml
day12a/src/: main.rs
day12b/: Cargo.toml
day12b/src/: main.rs
day13a/: Cargo.toml
day13a/src/: main.rs
day13b/: Cargo.toml
day13b/src/: main.rs
day14b/: Cargo.toml
day14b/src/: main.rs
day1a/: Cargo.toml
day1a/src/: main.rs
day1b/: Cargo.toml
day1b/src/: main.rs
day2a/: Cargo.toml
day2a/src/: main.rs
day2b/: Cargo.toml
day2b/src/: main.rs
day3a/: Cargo.toml  input.txt
day3a/src/: main.rs
day3b/: Cargo.toml
day3b/src/: main.rs
day4a/: Cargo.toml
day4a/src/: main.rs
day4b/: Cargo.toml
day4b/src/: main.rs
day5a/: Cargo.toml
day5a/src/: main.rs
day5b/: Cargo.toml
day5b/src/: main.rs
day6a/: Cargo.toml
day6a/src/: main.rs
day6b/: Cargo.toml
day6b/src/: main.rs
day7a/: Cargo.toml
day7a/src/: main.rs
day7b/: Cargo.toml
day7b/src/: main.rs
day8a/: Cargo.toml
day8a/src/: main.rs
day8b/: Cargo.toml
day8b/src/: main.rs
day9a/: Cargo.toml
day9a/src/: main.rs
day9b/: Cargo.toml
day9b/src/: main.rs
src/: main.rs
